	or event handler).

	- Constructor options are now case-insensitive.

	- Merged Asterisk::AMI::Common::Dev into Asterisk::AMI::Common. This was done because Asterisk 1.8 is now released.

	- Notes have been added to Asterisk::AMI::Common methods that require Asterisk 1.8+.

	- Fixed a typo in the get_var() method in Asterisk::AMI::Common. $self-action should have been $self->action.

	NOT DONE

	- Added compatibility to some Asterisk::AMI::Common methods so that they can be used with Asterisk 1.4.
	Compatibility for 1.4 often requires invokation of cli commands and/or multiple manager actions to gather
	the required information. Check method documentation for more information.

	- Added mute_audio() method to Asterisk::AMI::Common for muting inbound/outbound audio on a channel

	- Added park() method to Asterisk::AMI::Common for parking a channel

	- Added mixmonitor_mute muting inbound and/or outbound audio in a MixMonitor recording.

0.2.2   - Added a call to AE::now_update in blocking methods to force the time for the event loop to update. Fixes an
	  issue where if sleep was called for a period before a blocking call after connecting that the resulting 
	  blocking call would return a timeout (rt #61148).

0.2.1	- Fixed some errors in the documentation

	- Fixed a bug where we would leave an empty value in callbacks on a get_response if the response was already in the
	buffer. Only error message for this happend once the Asterisk::AMI object went away and attempted to flush all
	pending callbacks.
	
	- Require AnyEvent 5.2 or newer, as a feature we rely on was introduced in that release. Note, I have only tested as far back
	as version 5.26.

0.2.0
	- Added new syntax for using callbacks with the send_action method. Old syntax still works.
	Check documentation for this method for more details.

	- Changed method of parsing from a regex to a simple split. This was possible due to previous